; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference_normalize_name.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference_normalize_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@GIT_ERROR_REFERENCE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i8] c"the provided buffer is too short to hold the normalization of '%s'\00", align 1
@GIT_EBUFS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_reference_normalize_name(i8* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @git_reference__normalize_name(i32* %9, i8* %12, i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  br label %31

17:                                               ; preds = %4
  %18 = call i64 @git_buf_len(i32* %9)
  %19 = load i64, i64* %6, align 8
  %20 = sub i64 %19, 1
  %21 = icmp ugt i64 %18, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load i32, i32* @GIT_ERROR_REFERENCE, align 4
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @git_error_set(i32 %23, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0), i8* %24)
  %26 = load i32, i32* @GIT_EBUFS, align 4
  store i32 %26, i32* %10, align 4
  br label %31

27:                                               ; preds = %17
  %28 = load i8*, i8** %5, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @git_buf_copy_cstr(i8* %28, i64 %29, i32* %9)
  store i32 0, i32* %10, align 4
  br label %31

31:                                               ; preds = %27, %22, %16
  %32 = call i32 @git_buf_dispose(i32* %9)
  %33 = load i32, i32* %10, align 4
  ret i32 %33
}

declare dso_local i32 @git_reference__normalize_name(i32*, i8*, i32) #1

declare dso_local i64 @git_buf_len(i32*) #1

declare dso_local i32 @git_error_set(i32, i8*, i8*) #1

declare dso_local i32 @git_buf_copy_cstr(i8*, i64, i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
